dfir_rs/tests/compile-fail/surface_inline_cycle.stderr
error: Cyclical dataflow within a tick is not supported. Use `defer_tick()` or `defer_tick_lazy()` to break the cycle across ticks.
 --> tests/compile-fail/surface_inline_cycle.rs:3:9
  |
3 |         source_iter(0..5_i32) -> my_union;
  |         ^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
 --> tests/compile-fail/surface_inline_cycle.rs:2:9
  |
2 |     let mut flow = dfir_rs::dfir_syntax! {
  |         ----^^^^
  |         |
  |         help: remove this `mut`
  |
  = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `flow`
 --> tests/compile-fail/surface_inline_cycle.rs:2:9
  |
2 |     let mut flow = dfir_rs::dfir_syntax! {
  |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_flow`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
